# trends

./: .gitignore  CMakeLists.txt  README.md  TODO.md  share_CMakeLists.txt
src/: main.cpp
src/common/: cCurl.cpp  cIPC_sync.c  cJSON.c  cQueue.c  klibc.c
test/: gtk2.c  gtk3.c  ms.c  ms.mk  ms.sh  ms.txt  test.c  test_log4c.c  test_recursion.c  testcario.c  testglade.c  testgtk.c
